[package]
name = "pentair-pump-controller"
version = "0.1.0"
authors = ["Judge Maygarden <jmaygarden@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
embassy-executor = { version = "0.3.2", features = [
    "arch-riscv32",
    "executor-thread",
    "integrated-timers",
    "nightly",
] }
embassy-net = { version = "0.2.1", features = [
    "dhcpv4-hostname",
    "medium-ethernet",
    "nightly",
    "tcp",
] }
embassy-time = { version = "0.1.5", features = ["nightly"] }
embedded-io-async = "0.6.0"
embedded-svc = { version = "0.26.2", default-features = false, features = [
    "nightly",
] }
esp-backtrace = { version = "0.9.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.7.0", features = ["esp32c3", "log"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi/", rev = "5a7b8f04dfbcc2da256238b49b19b9bd73105f49", features = [
    "async",
    "embassy-net",
    "esp32c3",
    "wifi",
] }
hal = { package = "esp32c3-hal", version = "0.13.0", features = [
    "async",
    "embassy-time-timg0",
] }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.18" }
static_cell = { version = "=1.2", features = ["nightly"] }
